<resources>
    <string name="app_name">Ezergy</string>
    <string name="welcome_msg">Welcome</string>
    <string name="tenant_name">Star Wars Coffee</string>
    <string name="usage_day">Usage (Day):</string>
    <string name="usage_month">Usage (Month):</string>
    <string name="savings_month">Total Savings (Month):</string>
    <string name="savings_total">Total Savings so far:</string>
    <string name="payment_dialog_msg">Your outstanding bill amounts to: </string>
    <string name="payment_btn_text">PROCEED</string>
    <string name="title_activity_login">Sign in</string>
    <string name="electricity_graph_text">Electricity Usage</string>
    <string name="company_name_text">Company: </string>
    <string name="billing_status_text">Billing Status:</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
