<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/company_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name_text"
            android:textSize="18sp"
            android:paddingBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            app:layout_constraintLeft_toRightOf="@id/company_name_text"
            android:text="Star Wars Coffee"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/billingStatusTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/company_name_text"
            android:text="@string/billing_status_text"/>

        <TextView
            android:id="@+id/billingStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/billingStatusTxt"
            app:layout_constraintTop_toBottomOf="@id/company_name_text"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/electricityGraphTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/electricity_graph_text"
            app:layout_constraintTop_toBottomOf="@id/billingStatusTxt" />


        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/graph"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/electricityGraphTxt"/>

    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>